--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,7 +75,7 @@
     "remoteHub.commitDirectlyWarning": "off",
     "editor.hover.delay": 500,
     "java.project.sourcePaths": [
-        "OOP Lab"
+        "OOP Lab/Lab 11"
     ]
     
 }
